# FullStack_RAG_Application

./: README.md
backend/: .env  pyproject.toml
backend/src/: app.py  qdrant.py  rag.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  QuestionForm.js  react-spinners.js
