[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Navodya Dhanushka",email = "navodyadhanushka01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-decouple (>=3.8,<4.0)",
    "qdrant-client (>=1.13.0,<2.0.0)",
    "openai (>=1.59.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
